--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -234,7 +234,8 @@ ds-dynamic-form-control-container.d-none {
 }
 
 .badge-archived {
-  background-color: #{map-get($theme-colors, success)};
+  background-color: var(--ds-badge-archived-background-color);
+	color: var(--ds-badge-archived-color)
 }
 
 .badge-workflow {
@@ -269,27 +270,115 @@ ul.dso-edit-menu-dropdown > li .nav-item.nav-link {
 }
 
 .pt-0\.5 {
-  padding-top: 0.125rem !important;
+    padding-top: 0.125rem !important;
 }
 
 .pr-0\.5 {
-  padding-right: 0.125rem !important;
+    padding-right: 0.125rem !important;
 }
 
 .pb-0\.5 {
-  padding-bottom: 0.125rem !important;
+    padding-bottom: 0.125rem !important;
 }
 
 .pl-0\.5 {
-  padding-left: 0.125rem !important;
+    padding-left: 0.125rem !important;
 }
 
 .px-0\.5 {
-  padding-left: 0.125rem !important;
-  padding-right: 0.125rem !important;
+    padding-left: 0.125rem !important;
+    padding-right: 0.125rem !important;
 }
 
 .py-0\.5 {
-  padding-top: 0.125rem !important;
-  padding-bottom: 0.125rem !important;
+    padding-top: 0.125rem !important;
+    padding-bottom: 0.125rem !important;
+}
+
+.btn.btn-success{
+	background-color: var(--ds-button-success-background-color);
+	border-color: var(--ds-button-success-background-color);
+	&:hover{
+		background-color: var(--ds-button-success-background-hover-color);
+		border-color: var(--ds-button-success-background-hover-color);
+	}
+}
+.btn.btn-outline-success{
+	border-color: var(--ds-button-success-background-color);
+	color: var(--ds-button-success-background-color);
+	&:hover{
+		background-color: var(--ds-button-success-background-hover-color);
+		color: $white;
+	}
+}
+.btn.btn-outline-warning{
+	border-color:var(--ds-button-warning-background-color);
+	color:var(--ds-button-warning-background-color);
+	&:hover{
+		background-color:var(--ds-button-warning-background-hover-color);
+		color: $white;
+	}
+	&:disabled{
+		background-color: transparent;
+		&:hover{
+			color:var(--ds-button-warning-background-color);
+		}
+	}
+}
+
+
+.btn:focus, .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus, .custom-control-input:focus ~ .custom-control-label::before, .form-control:focus, .page-link:focus{
+	box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.25), 0 0 0 0.2rem rgba(27, 41, 55, 0.5);
+}
+
+.btn.btn-success:focus, .btn.btn-outline-success:focus{
+    outline: 2px solid rgba(76, 145, 76, 1);
+    outline-offset: 2px;
+    box-shadow: none;
+}
+.btn.btn-danger:focus, .btn.btn-outline-danger:focus{
+	outline: 2px solid rgba(205, 126, 126, 1);
+    outline-offset: 2px;
+    box-shadow: none;
+}
+.btn.btn-warning:focus, .btn.btn-outline-warning:focus {
+    outline: 2px solid rgba(88, 87, 65, 1);
+    outline-offset: 2px;
+    box-shadow: none;
+}
+.btn.btn-primary:focus, .btn.btn-outline-primary:focus {
+    box-shadow: none;
+    outline: 2px solid rgba(134, 137, 139, 1);
+    outline-offset: 2px;
+}
+.btn.btn-secondary:focus, .btn.btn-outline-secondary:focus {
+    box-shadow: none;
+    outline: 2px solid rgba(141, 148, 155, 1);
+    outline-offset: 2px;
+}
+.btn.btn-warning{
+	background-color:var(--ds-button-warning-background-color);
+	&:hover{
+		background-color:var(--ds-button-warning-background-hover-color);
+	}
+	&:disabled{
+		background-color: transparent;
+	}
+}
+dynamic-ng-bootstrap-checkbox .custom-control-label::before {
+    border-color: #858c91;
+}
+.text-warning {
+    color: var(--ds-text-warning-color) !important;
+}
+.text-success {
+    color: var(--ds-text-success-color) !important;
+}
+ngb-accordion {
+    a.close {
+        opacity: 0.75;
+    }
+    a.close:not(:disabled):not(.disabled):hover {
+        opacity: 0.9;
+    }
 }
